[package]
name = "ds18b20"
version = "2.0.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>", "Chris Woolum <christopher.woolum@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/cwoolum/ds18b20"
keywords = ["onewire", "embedded-hal-driver", "ds18b20", "temperature", "sensor"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust DS18B20 temperature sensor driver for [embedded-hal](https://github.com/rust-embedded/embedded-hal)
"""

[dependencies]
embedded-hal = "1.0"
one-wire-bus = { git = "https://github.com/cwoolum/one-wire-bus", tag = "v2.0.0" }